--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,20 @@
 @tailwind components;
 @tailwind utilities;
 
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
+html,
+body {
+  max-width: 100vw;
+  overflow-x: hidden;
+}
+
+
+
 @layer base {
   html {
     font-family: 'Raleway', sans-serif;
