--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap");
 
 @tailwind base;
 @tailwind components;
@@ -17,10 +17,28 @@ body {
   overflow-x: hidden;
 }
 
+.main {
+  @apply text-slate-200 min-h-screen w-screen;
+}
 
+.main::before {
+  content: "";
+  width: 100%;
+  height: 100%;
+  @apply bg-gradient-to-b from-colordark via-colordark to-color1 fixed top-0 z-[-1];
+}
+
+.section {
+  @apply min-h-screen flex justify-center items-center p-8 my-10 mx-auto max-w-screen-md 
+  lg:max-w-4xl xl:max-w-7xl;
+}
+
+.section-title {
+  @apply my-8 max-w-fit text-4xl font-bold border-b-4 border-slate-500;
+}
 
 @layer base {
   html {
-    font-family: 'Raleway', sans-serif;
+    font-family: "Raleway", sans-serif;
   }
 }
